2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: More cleanup.

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Remove 'rescan' command, nobody knows what it's for and
	nobody uses it.
	* Package.pm, PkgVersion.pm: Cleanup and document. More cleaning to come!

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, Shlibs.pm: Stop Shlibs inheriting from Package, for it is
	silly.

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Put g++-3.3 as g++ and c++ at the front of the PATH.
	* Bootstrap.pm: Include path-prefix in install files.

2005-04-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: backed out the default value for CXXFLAGS, added
	a default value for CXX instead
	* Bootstrap.pm:  recognize 10.3.9
	* PkgVersion.pm: make sure NoSetCXX still works

2005-04-19  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: put an actual file in the buildlock package.

2005-04-19  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Whine if a perl-versioned package installs a file
	whose path does not encode the version.

2005-04-16  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm, PkgVersion.pm, Services.pm: Overhauled enforce_gcc
	error messages.

2005-04-16  Chris Zubrzycki  <beren12@users.sourceforge.net>

	* PkgVersion.pm: Allow passing of TERM to build env (colorgcc)

2005-04-16  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm, Services.pm: Improved error when no gcc_select present.

2005-04-15  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: No interruption of buildlock pkg lookup

2005-04-11  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: add a default for CXXFLAGS for recent distributions

2005-04-08  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Optimize 'fink list' with globs or multiple args.

2005-04-05  Daniel Macks  <dmacks@netspace.org>
