@@ -1,5 +1,9 @@
 2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>
 
+	* Package.pm: Indexing doesn't break now.
+
+2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
 	* Package.pm: More cleanup.
 
 2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>
